--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,12 @@ set(ROS_DEPENDENCIES
     behaviortree_cpp_v3
     actionlib_msgs
     actionlib
-    message_generation)
+    message_generation
+    rc_msgs)
 
 find_package(catkin REQUIRED COMPONENTS ${ROS_DEPENDENCIES} )
 find_package(GTest)
+find_package(behaviortree_cpp_v3 REQUIRED)
 
 add_message_files(
   FILES
@@ -51,6 +53,7 @@ catkin_package(
 
 include_directories( include 
 ${catkin_INCLUDE_DIRS})
+include_directories(${BEHAVIORTREE_CPP_V3_INCLUDE_DIRS})
 
 ######################################################
 # LIBRARIES
@@ -71,7 +74,7 @@ add_executable(test_server test/treeNode/test_server.cpp)
 add_dependencies(test_server ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(test_server ${catkin_LIBRARIES} )
 
-add_executable(${PROJECT_NAME} src/move_base_client.cpp src/control_loop.cpp)
+add_executable(${PROJECT_NAME} src/move_base_client.cpp src/control_loop.cpp src/lasermove_client.cpp)
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} )
 
