--- a/package.xml
+++ b/package.xml
@@ -62,6 +62,7 @@
   <depend>actionlib</depend>
   <depend>actionlib_msgs</depend>
   <depend>message_generation</depend>
+  <depend>rc_msgs</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
